<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/prompt_delivery_address"
                    android:textColor="@color/g1"
                    android:textSize="16dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/contact_person_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/contact_person"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:digits="qwertyuiopasdfghjklmnbvcxz. QWERTYUIOPLKJHGFDSAZXCVBNM"
                        android:hint="@string/prompt_contact_person"
                        android:inputType="textPersonName"
                        android:textColor="@color/g1"
                        android:textColorHint="@color/g2"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_number_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:digits="0123456789"
                        android:hint="@string/prompt_phone_hint"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textColor="@color/g1"
                        android:textColorHint="@color/g2"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:digits="qwertyuiopasdfghjklmnbvcxzQWERTYUIOPLKJHGFDSAZXCVBNM@._0123456789"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/g1"
                        android:textColorHint="@color/g2"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/house_number_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/house_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:digits="qwertyuiopasdfghjklmnbvcxzQWERTYUIOPLKJHGFDSAZXCVBNM _-./#0123456789"
                        android:hint="@string/prompt_house_number"
                        android:inputType="text"
                        android:textColor="@color/g1"
                        android:textColorHint="@color/g2"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/street_address_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/street_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:digits="qwertyuiopasdfghjklmnbvcxzQWERTYUIOPLKJHGFDSAZXCVBNM .#,-\/0123456789"
                        android:hint="@string/prompt_street_address"
                        android:inputType="textMultiLine"
                        android:textColor="@color/g1"
                        android:textColorHint="@color/g2"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/get_current_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="35dp"
                    android:background="@drawable/button"
                    android:drawableLeft="@android:drawable/ic_dialog_map"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/action_get_address"
                    android:textAllCaps="false"
                    android:textColor="@color/g1"
                    android:typeface="normal" />
            </LinearLayout>


    <ProgressBar
        android:id="@+id/deliver_page_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
