<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:titleEnabled="false">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleEnabled="false">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:textSize="@dimen/text_size_18sp"
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/g1"
                    android:textColorHint="@color/g3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:textSize="@dimen/text_size_18sp"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_mail"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/g1"
                    android:textColorHint="@color/g3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:textSize="@dimen/text_size_18sp"
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_mobile"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/g1"
                    android:textColorHint="@color/g3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:textSize="@dimen/text_size_18sp"
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_address"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textPostalAddress"
                    android:singleLine="true"
                    android:textColor="@color/g1"
                    android:textColorHint="@color/g3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_verification"
                    android:imeOptions="flagNoFullscreen"
                    android:singleLine="true"
                    android:textColor="@color/g1"
                    android:textColorHint="@color/g3"
                    android:visibility="gone" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/dated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:drawableRight="@drawable/calender_gray"
                android:gravity="center_vertical"
                android:hint="Date"
                android:textSize="@dimen/text_size_18sp"
                android:padding="5dp" />

            <TextView
                android:textSize="@dimen/text_size_18sp"
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:drawableRight="@drawable/clock_gray"
                android:gravity="center_vertical"
                android:hint="Time"
                android:padding="5dp" />


            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <RadioButton
                    android:id="@+id/radiopay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/g1"
                    android:text="Pay now"
                     />

                <RadioButton
                    android:id="@+id/radiopaynot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/g1"
                    android:text="Pay at the Centre" />

            </RadioGroup>

        </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="@color/y2"
            android:text="@string/action_submit"
            android:textColor="@color/white"
            />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>