<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/manual_entry_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp">

            <LinearLayout
                android:id="@+id/manual_medicine_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/manual_medicine_layout"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/prompt_manual_long"
                android:textSize="14sp" />

            <Button
                android:id="@+id/enter_another_item_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@color/g2"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/action_enter"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light" />
        </RelativeLayout>


    </ScrollView>
    <!--
        <Button
            android:id="@+id/add_items_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/b1"
            android:gravity="center"
            android:text="@string/action_add_items"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/b1"
        android:orientation="horizontal">

        <!--<Button
            android:id="@+id/add_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@null"
            android:text="@string/action_add_more"
            android:textAllCaps="false"
            android:textColor="@color/g4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="|"
            android:textColor="@color/g4"
            android:textSize="25sp" />-->

        <Button
            android:id="@+id/review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@null"
            android:text="@string/prompt_order_button"
            android:textAllCaps="false"
            android:textColor="@color/g4" />
    </LinearLayout>

    </RelativeLayout>